Add async extraction with client-side polling
- Refactor refyne.ts to use @refyne/sdk instead of direct fetch
- Add /api/extract endpoint to start async crawl jobs
- Add /api/poll/[jobId] endpoint to poll job status
- Rewrite add.astro with client-side polling UI
- Show progress indicator and elapsed time during extraction
- Handle 2-minute timeout gracefully

This fixes 502 errors on large pages by avoiding Cloudflare Worker
timeout limits through async job polling.

--- a/diyviewer/package.json
+++ b/diyviewer/package.json
@@ -18,7 +18,8 @@
   },
   "dependencies": {
     "astro": "^5.16.13",
-    "@astrojs/cloudflare": "^12.5.1"
+    "@astrojs/cloudflare": "^12.5.1",
+    "@refyne/sdk": "file:../../../refyne-sdk-ts"
   },
   "devDependencies": {
     "@tailwindcss/vite": "^4.1.18",
