--- a/diyviewer/package.json
+++ b/diyviewer/package.json
@@ -19,7 +19,7 @@
   "dependencies": {
     "astro": "^5.16.13",
     "@astrojs/cloudflare": "^12.5.1",
-    "@refyne/sdk": "file:../../../refyne-sdk-ts"
+    "@refyne/sdk": "github:jmylchreest/refyne-sdk-ts"
   },
   "devDependencies": {
     "@tailwindcss/vite": "^4.1.18",
