Add db-to-seed export scripts and SDK migration
Recipe App:
- Migrate to @refyne/sdk from direct fetch
- Add author and author_url extraction
- Add image_urls extraction for instruction steps
- Add db:export and db:list npm scripts

DIY Viewer:
- Add db:export and db:list npm scripts

Both:
- Add export-seed.ts script for generating seed SQL from DB entries
- Add tsx as dev dependency for running scripts

--- a/recipeapp/package.json
+++ b/recipeapp/package.json
@@ -14,15 +14,19 @@
     "db:seed": "wrangler d1 execute refyne-recipeapp-db --local --file=./migrations/002_seed.sql",
     "db:seed:remote": "wrangler d1 execute refyne-recipeapp-db --remote --file=./migrations/002_seed.sql",
     "db:reset": "wrangler d1 execute refyne-recipeapp-db --local --file=./migrations/003_reset.sql",
+    "db:export": "npx tsx scripts/export-seed.ts",
+    "db:list": "wrangler d1 execute refyne-recipeapp-db --local --command=\"SELECT id, title FROM recipes\"",
     "deploy": "npm run build && wrangler pages deploy dist"
   },
   "dependencies": {
     "astro": "^5.16.13",
-    "@astrojs/cloudflare": "^12.5.1"
+    "@astrojs/cloudflare": "^12.5.1",
+    "@refyne/sdk": "github:jmylchreest/refyne-sdk-ts"
   },
   "devDependencies": {
     "@tailwindcss/vite": "^4.1.18",
     "tailwindcss": "^4.1.18",
+    "tsx": "^4.19.0",
     "wrangler": "^4.60.0",
     "typescript": "^5.9.3"
   }
