--- a/diyviewer/package.json
+++ b/diyviewer/package.json
@@ -18,7 +18,7 @@
   },
   "dependencies": {
     "@astrojs/cloudflare": "^12.5.1",
-    "@refyne/sdk": "file:../../refyne-sdk-ts",
+    "@refyne/sdk": "github:jmylchreest/refyne-sdk-ts",
     "astro": "^5.16.13"
   },
   "devDependencies": {
