--- a/diyviewer/package.json
+++ b/diyviewer/package.json
@@ -14,6 +14,7 @@
     "db:seed": "wrangler d1 execute refyne-diyviewer-db --local --file=./migrations/002_seed.sql",
     "db:seed:remote": "wrangler d1 execute refyne-diyviewer-db --remote --file=./migrations/002_seed.sql",
     "db:reset": "wrangler d1 execute refyne-diyviewer-db --local --file=./migrations/003_reset.sql",
+    "db:export": "npx tsx scripts/export-seed.ts",
     "deploy": "npm run build && wrangler pages deploy dist"
   },
   "dependencies": {
